--- a/Demo/webpack-demo/.babelrc
+++ b/Demo/webpack-demo/.babelrc
@@ -1,3 +1,14 @@
 {
-    "presets": ["react", "es2015"]
+    "presets": ["react", "es2015"],
+    "env": {
+        "development": {
+            "plugins": [["react-transform", {
+                "transforms": [{
+                    "transform": "react-transform-hmr",
+                    "imports": ["react"],
+                    "locals": ["module"]
+                }]
+            }]]
+        }
+    }
 }
