--- a/Demo/react-demo/package.json
+++ b/Demo/react-demo/package.json
@@ -4,12 +4,26 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "webpack": "webpack -d --watch"
+    "start": "webpack-dev-server --open"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-loader": "^6.4.0"
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.26.4",
+    "postcss-loader": "^1.3.3",
+    "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.13.2",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
+  },
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
   }
 }
