--- a/Demo/redux-demo/package.json
+++ b/Demo/redux-demo/package.json
@@ -11,6 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^0.27.3",
+    "file-loader": "^0.10.1",
+    "json-loader": "^0.5.4",
+    "style-loader": "^0.14.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.1"
   },
