--- a/Demo/redux-demo/package.json
+++ b/Demo/redux-demo/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "css-loader": "^0.27.3",
     "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
     "json-loader": "^0.5.4",
     "style-loader": "^0.14.1",
     "url-loader": "^0.5.8",
