--- a/Demo/redux-demo/package.json
+++ b/Demo/redux-demo/package.json
@@ -21,6 +21,7 @@
     "webpack-dev-server": "^2.4.1"
   },
   "dependencies": {
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0"
   }
 }
