--- a/Demo/react-demo/package.json
+++ b/Demo/react-demo/package.json
@@ -4,26 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open"
+    "build": "webpack --progress --watch",
+    "start": "webpack-dev-server --hot "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-loader": "^6.4.1",
     "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-2": "^6.22.0",
-    "css-loader": "^0.26.4",
-    "postcss-loader": "^1.3.3",
-    "react-hot-loader": "^1.3.1",
-    "style-loader": "^0.13.2",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "css-loader": "^0.27.3",
+    "json-loader": "^0.5.4",
+    "style-loader": "^0.15.0",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.3.0",
+    "webpack-dev-server": "^2.4.2"
   },
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.0",
+    "redux": "^3.6.0"
   }
 }
