--- a/Demo/redux-react-demo/package.json
+++ b/Demo/redux-react-demo/package.json
@@ -14,6 +14,9 @@
     "babel-loader": "^6.4.1",
     "babel-preset-react": "^6.23.0",
     "css-loader": "^0.27.3",
+    "eslint": "^3.18.0",
+    "eslint-loader": "^1.6.3",
+    "eslint-plugin-react": "^6.10.3",
     "json-loader": "^0.5.4",
     "style-loader": "^0.15.0",
     "url-loader": "^0.5.8",
