--- a/Demo/redux-react-demo/.babelrc
+++ b/Demo/redux-react-demo/.babelrc
@@ -1,4 +1,15 @@
 {
-    "presets": ["react"],
-    "plugins": []
+    "presets": [
+        [
+            "es2015",
+            {
+                "modules": false
+            }
+        ],
+        "react",
+        "stage-2"
+    ],
+    "plugins": [
+        
+    ]
 }
