--- a/Demo/redux-react-demo/package.json
+++ b/Demo/redux-react-demo/package.json
@@ -5,20 +5,27 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --progress --watch",
-    "start": "webpack-dev-server --hot"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot",
+    "pro": "cross-env NODE_ENV=production PLATFORM=web webpack --progress --colors --optimize-minimize"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "cross-env": "^3.2.4",
     "css-loader": "^0.27.3",
     "eslint": "^3.18.0",
     "eslint-loader": "^1.6.3",
     "json-loader": "^0.5.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
+    "postcss-loader": "^1.3.3",
+    "react-hot-loader": "^1.3.1",
     "style-loader": "^0.15.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.3.0",
