--- a/the-best/package.json
+++ b/the-best/package.json
@@ -33,6 +33,8 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    "react-router-dom": "^4.2.2"
+    "prop-types": "^15.6.1",
+    "react-router-dom": "^4.2.2",
+    "react-transition-group": "^2.2.1"
   }
 }
