--- a/the-best/package.json
+++ b/the-best/package.json
@@ -26,7 +26,7 @@
     "css-loader": "^0.28.9",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.0.1",
+    "less": "^2.7.2",
     "less-loader": "^4.0.6",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
@@ -35,6 +35,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "antd": "^3.3.0",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
