--- a/the-best/package.json
+++ b/the-best/package.json
@@ -40,6 +40,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-transition-group": "^2.2.1"
+    "react-transition-group": "^2.2.1",
+    "remarkable": "^1.7.1"
   }
 }
