--- a/the-best/package.json
+++ b/the-best/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "antd": "^3.3.0",
+    "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
