--- a/the-best/package.json
+++ b/the-best/package.json
@@ -40,6 +40,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-remarkable": "^1.1.3",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
     "remarkable": "^1.7.1"
