--- a/the-best/package.json
+++ b/the-best/package.json
@@ -39,6 +39,7 @@
     "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
+    "react-color": "^2.14.0",
     "react-dom": "^16.2.0",
     "react-remarkable": "^1.1.3",
     "react-router-dom": "^4.2.2",
