--- a/the-best/package.json
+++ b/the-best/package.json
@@ -36,11 +36,13 @@
   },
   "dependencies": {
     "antd": "^3.3.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-color": "^2.14.0",
     "react-dom": "^16.2.0",
+    "react-draggable": "^3.0.5",
     "react-remarkable": "^1.1.3",
     "react-router-dom": "^4.2.2",
     "react-transition-group": "^2.2.1",
