--- a/the-best/package.json
+++ b/the-best/package.json
@@ -38,6 +38,7 @@
     "antd": "^3.3.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
+    "leaflet": "^1.3.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-color": "^2.14.0",
