--- a/redux-react-demo2/package.json
+++ b/redux-react-demo2/package.json
@@ -33,6 +33,7 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.7",
