--- a/message-board(react-redux-router)/package.json
+++ b/message-board(react-redux-router)/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-swipeable-views": "^0.12.13",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   }
 }
