--- a/webpack-react-less(basic-config-for-other)/package.json
+++ b/webpack-react-less(basic-config-for-other)/package.json
@@ -22,6 +22,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
     "css-loader": "^0.28.9",
+	"copy-webpack-plugin": "^4.5.1",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.0.1",
