--- a/wheel-react-less/package.json
+++ b/wheel-react-less/package.json
@@ -19,13 +19,14 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "clean-webpack-plugin": "^0.1.17",
+    "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.9",
-	"copy-webpack-plugin": "^4.5.1",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
-    "less": "^3.0.1",
+    "less": "^2.7.2",
     "less-loader": "^4.0.6",
     "style-loader": "^0.19.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
@@ -34,6 +35,11 @@
     "webpack-merge": "^4.1.1"
   },
   "dependencies": {
-    
+    "prop-types": "^15.6.1",
+    "react": "^16.2.0",
+    "react-color": "^2.14.0",
+    "react-dom": "^16.2.0",
+    "react-remarkable": "^1.1.3",
+    "react-router-dom": "^4.2.2"
   }
 }
